fix(thread-list): Constrain details width to ensure attachment icon visible. #1858

--- a/internal_packages/thread-list/stylesheets/thread-list.less
+++ b/internal_packages/thread-list/stylesheets/thread-list.less
@@ -166,7 +166,8 @@
   .details {
     display:flex;
     align-items: center;
-
+    overflow: hidden;
+    
     .subject {
       font-size:   @font-size-small;
       font-weight: @font-weight-normal;
